--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <div class=" mt-4">
 
                <!-- <h1 class="titulo text-left">Lunas de</h1>-->
-               <h1 class='titulo col-md-12 mb-2  mt-0 text-center' style="letter-spacing: 0px; color:#2d5356">Centro de Salud Mental </h1>
+               <h1 class='titulo col-md-12 mb-2  mt-0 text-center' style="letter-spacing: 0px; color:#2d5356">Centro de Medicina Natural </h1>
                  <h1 class='titulo2 col-md-12 mb-2  mt-0 text-center'>Casa Canoas </h1>
             </div>
                
@@ -243,7 +243,7 @@
 
                <!-- <h1 class="titulo text-left">Lunas de</h1>-->
                  <h1 class='titulo col-md-12 mb-2  mt-5 text-center' style="letter-spacing: 0px; color:#2d5356; font-size: 40px;">Donativos </h1>
-                 <h1 class='texto2 col-md-12 mb-2  mt-4 text-center' style="letter-spacing: 0px; color:#000; font-size:22PX">Al correo <br><b>funrpayan59@gmail.com</b></h1>
+                 <h1 class='texto2 col-md-12 mb-2  mt-4 text-center' style="letter-spacing: 0px; color:#000; font-size:22PX">Contacto: <br><b>funrpayan59@gmail.com</b></h1>
             </div>
              <div class="social2-container mt-2" style="background-color: #fff;">
                 <ul class="social2-icons">
